--- a/src/css/main.css
+++ b/src/css/main.css
@@ -42,7 +42,6 @@
 }
 
 .controlPanel {
-    padding-top: 3.5%;
     width: 40%;
 }
 
